--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="ToDo">
   <meta name="keywords" content="React + Typescript">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/phosphor-icons"></script>
   <title>ToDo</title>
 </head>
 
